tags/2013-08-29_cppreference/Archive/ef34914deff8777c8a70df28233b0a9c-61c3814520a8d4318f681038dc4b4da7/output
main.cpp:3:22: error: invalid declarator before '(' token
 std::function<void()>()();
                      ^
